Fix whitespace after news feed article headers

--- a/news-posts.less
+++ b/news-posts.less
@@ -17,8 +17,8 @@
 ***  TABLE OF CONTENTS:
 ***  ────────────────────────────────────────────────────────────────────────────────────────────
 ***  §1: Primary news feed & posts: Articles & components......................................29
-***  §2: Primary news feed & posts: Widgets & components......................................115
-***  §3: Secondary news feeds (via WSUWP-Content-Syndicate plugin)............................180
+***  §2: Primary news feed & posts: Widgets & components......................................114
+***  §3: Secondary news feeds (via WSUWP-Content-Syndicate plugin)............................179
 ***  ───────────────────────────────────────────────────────────────────────────────────────────────
 **/
 
@@ -50,7 +50,6 @@
 
 			& + * {
 				margin-top: 1em;
-				padding-top: 15px;
 			}
 		}
 
